[package]
name = "wx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"]}
serde_json = "1.0"
chrono = "0.4.28"
csv = "1.3"
